# niSneak

./: README.md  requirements.txt
baselines/hyperopt/: Hyperopt Commits.ipynb  Hyperopt Issues.ipynb  Hyperopt PRs.ipynb
baselines/hyperopt/.ipynb_checkpoints/: Hyperopt Commits-checkpoint.ipynb  Hyperopt Issues-checkpoint.ipynb  Hyperopt PRs-checkpoint.ipynb
baselines/nue_framework/: requirements.txt
baselines/nue_framework/src/: calculate-baseline.py  calculate-baseline2.py  calculate-dim.py  ml-test.py  ml.py  optimize.py  partition.py  test-split.py
baselines/nue_framework/src/baseline/: __init__.py  baseline.py  marp0.py  marp0loo.py  mdarp0.py  median.py
baselines/nue_framework/src/dimensionality/: __init__.py  dim.py
baselines/nue_framework/src/evaluation/: Metric.py  __init__.py  accuracy.py  d2h.py  evaluation.py  fairness.py  pareto.py  regression.py  utils.py
baselines/nue_framework/src/learning/: __init__.py  learner.py  mlpreg.py
baselines/nue_framework/src/map/: Database.py  __init__.py  baseline_db.py  dataset_db.py  learning_db.py  metric_db.py  model_db.py  optimization_db.py  preprocessing_db.py  selection_db.py  (+2 more)
baselines/optuna/: Optuna commits.ipynb  Optuna issues.ipynb  Optuna prs.ipynb  params.csv
niSNEAK/: niSneak.py  rq1.py  setup.cfg
niSNEAK/config/: configparams.py
niSNEAK/health/: README.md  health_bin_data_full.csv  health_bin_data_project0002.csv
niSNEAK/sneak_helper/: input_output.py  item.py  method.py  oracle.py  ranker.py  sat_solver.py  search.py  tree_node.py  ui_helper.py
niSNEAK/utils/: utils.py
(+3380 files in other folders)
