[pycodestyle]
count = False
ignore = E226,E302,E41
max-line-length = 160
statistics = True

[metadata]
name = whun
version = 0.0.1
author = Andre Lustosa
author_email = alustos@ncsu.edu
description = WHUN implementation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ai-se/whun/tree/feature-se2021/
project_urls =
    Bug Tracker = https://github.com/ai-se/whun/tree/feature-se2021
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data=True

[options.packages.find]
where = src